--- a/DataVisualizations.ipynb
+++ b/DataVisualizations.ipynb
@@ -699,6 +699,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This explains the average age of the victim  by crime category"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
